# backend/src/routes/meal-router/meal-router.ts
@@ -3,13 +3,21 @@ import MealController from '../../controllers/meal/meal.controller';
 import { CSVConverterService } from '../../services/csv-converter/csv-converter-service';
 import { Logger } from '../../services/logger/logger';
 import { WebsiteConverterService } from '../../services/website-converter/website-converter-service';
-import { SelectedMealQueryParams, queryAsBoolean, respondWithCSV } from '../../utils/routing/routing-utils';
+import { queryAsBoolean, respondWithCSV } from '../../utils/routing/routing-utils';
 
-export interface RankingsForMealQueryParams {
+export interface MealNamesQueryParams {
+  advanced?: boolean;
+  unlocked?: boolean;
+  lategame?: boolean;
+  curry?: boolean;
+  salad?: boolean;
+  dessert?: boolean;
+  csv?: boolean;
+}
+
+export interface MealRankingQueryParams {
   limit30?: boolean;
-  cyan?: boolean;
-  taupe?: boolean;
-  snowdrop?: boolean;
+  island?: string;
   csv?: boolean;
   pretty?: boolean;
 }
@@ -18,29 +26,26 @@ class MealRouterImpl {
   public router = express.Router();
 
   public async register(controller: MealController) {
-    this.router.get(
-      '/meal',
-      async (req: Request<unknown, unknown, unknown, SelectedMealQueryParams>, res: Response) => {
-        try {
-          Logger.log('Entered /meal');
-          const meals = await controller.getMeals(req.query);
+    this.router.get('/meal', async (req: Request<unknown, unknown, unknown, MealNamesQueryParams>, res: Response) => {
+      try {
+        Logger.log('Entered /meal');
+        const meals = await controller.getMeals(req.query);
 
-          if (queryAsBoolean(req.query.csv) === true) {
-            const data = 'Name\n' + `${meals.join('\n')}`;
-            respondWithCSV(res, data, 'meals');
-          } else {
-            res.header('Content-Type', 'application/json').send(JSON.stringify(meals, null, 4));
-          }
-        } catch (err) {
-          Logger.error(err as Error);
-          res.status(500).send('Something went wrong');
+        if (queryAsBoolean(req.query.csv) === true) {
+          const data = 'Name\n' + `${meals.join('\n')}`;
+          respondWithCSV(res, data, 'meals');
+        } else {
+          res.header('Content-Type', 'application/json').send(JSON.stringify(meals, null, 4));
         }
+      } catch (err) {
+        Logger.error(err as Error);
+        res.status(500).send('Something went wrong');
       }
-    );
+    });
 
     this.router.get(
       '/meal/:name',
-      async (req: Request<{ name: string }, unknown, unknown, RankingsForMealQueryParams>, res: Response) => {
+      async (req: Request<{ name: string }, unknown, unknown, MealRankingQueryParams>, res: Response) => {
         try {
           Logger.log('Entered /api/meal/:name');
           const { pretty, csv } = req.query;
